# LaneDeck

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json
.github/workflows/: ci.yml
e2e/: AGENTS.md  README.md  playwright.config.ts
e2e/specs/: agent-to-center-flow.spec.ts  content-mutation-flow.spec.ts
e2e/support/: browser.ts  content-seed.ts  contract-fixtures.ts  harness.ts  live-ws.ts
scripts/: cloudflare-center-ci.sh  cloudflare-center-deploy.sh  cloudflare-center-lib.sh  cloudflare-center-preflight.sh  cloudflare-center-shell-build.sh  cloudflare-center-verify.sh  e2e-preflight.mjs  e2e.sh
