[workspace]
members = [
  "packages/protocol",
  "packages/lane-engine",
  "packages/agent-runtime",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/atticusdeng/LaneDeck"
rust-version = "1.93"
version = "0.0.0"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
